# Emergene

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: emergene.html  emergene.preprocessing.html  emergene.tools.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  setup.html  tutorials.html
docs/_sources/: emergene.preprocessing.rst.txt  emergene.rst.txt  emergene.tools.rst.txt  emergene_1.rst.txt  emergene_1.tools.rst.txt  index.rst.txt  installation.md.txt  modules.rst.txt  references.ipynb.txt  tutorials.rst.txt
docs/notebooks/: 22_Emergene_Tutorial_SEA-AD_CaseControl_subset_useEmergeneScoring.html  26_Emergene_Tutorial_SEA-AD_CaseControl_subset_useEmergeneScoring-NewlyPackaged.html
emergene/: __init__.py  emergene.py  emergene_backup.py
emergene/plotting/: __init__.py
emergene/preprocessing/: __init__.py  _dataFrame.py  _normalization.py
emergene/tools/: __init__.py  _emergene.py  _markerGene.py  _module.py  _score.py  _utils.py
